PR 23678: Minor bug fix in CSS to prevent overflow...
 - Minor bug fix in CSS to prevent overflow...

--- a/src/components/GroupCard/GroupCard.scss
+++ b/src/components/GroupCard/GroupCard.scss
@@ -11,6 +11,7 @@
 .ms-groupCard-body {
     display: inline-block;
     flex-grow:1;
+    overflow: hidden;
 }
 
 .ms-groupCard-title {
